# frenezik

./: LICENSE.txt  MANIFEST .in  README.md  package_structure.txt  pyproject.toml  requirements.txt
src/frenezik/: __init__.py  _regularization.py  _residuals.py  _target_predictors.py  utils.py
src/frenezik.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/data/: .Rhistory  data_population.csv  data_sample.csv  data_test.csv  data_train.csv  housing_scaled.csv
tests/notebook/: demo_california_housing.ipynb  demo_simulated_data.ipynb
tests/test_r_package/: .Rhistory  Test_ridge_package.R  test_housing.R
